# BiasGenerator

./: .gitignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  glass_bridge_agent_memory.txt  glass_bridge_spec.md  glass_bridge_tournament_northflank_none_10games_winner_positions.csv  glass_bridge_tournament_northflank_none_10games_winners.csv  openenv.yaml  pyproject.toml
configs/: future_env_template.yaml  glass_bridge_local.yaml  glass_bridge_remote.yaml  glass_bridge_tournament_local.yaml  glass_bridge_tournament_mixed_models.yaml  glass_bridge_tournament_mixed_models_northflank.yaml  glass_bridge_tournament_northflank.yaml  glass_bridge_tournament_remote.yaml
glass_bridge/: README.md  __init__.py  client.py  llm_decision_backend.py  models.py  openenv.yaml  policies.py  pyproject.toml  tournament_env.py
glass_bridge/examples/: __init__.py  example_usage.py
glass_bridge/server/: Dockerfile  __init__.py  app.py  glass_bridge_environment.py
northflank/: README.md
requirements/: remote.txt
scripts/: eval_glass_bridge.py  eval_glass_bridge_tournament.py  run_glass_bridge_rollout.py  run_northflank_glass_bridge_job.py  smoke_gpu.py
src/openenv_glass_bridge/: __init__.py  client.py  models.py
src/openenv_glass_bridge/examples/: example_usage.py
src/openenv_glass_bridge/server/: __init__.py  app.py  glass_bridge_environment.py
src/starter_stack/: config.py  device.py  logging_utils.py
src/starter_stack/envs/: base.py
src/starter_stack/models/: trajectory.py
src/starter_stack/policies/: __init__.py  base.py  glass_bridge.py  llm_decision_backend.py  random_policy.py
src/starter_stack/trainers/: __init__.py  glass_bridge_eval.py  (+2 more)
(+3 files in other folders)
